adds pagination and infinityScroll

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,6 +17,7 @@
       </ul>
     </div>
     <div class="target-element"></div>
+    <button class="load-more" type="button">Load more</button>
   </div>
 
 </section>
