--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -96,3 +96,31 @@
   width: 150px;
   text-align: center;
 }
+
+.load-more {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin: 60px auto 0 auto;
+  width: 200px;
+  height: 50px;
+  border-radius: 3px;
+  border: none;
+  background-color: rgb(101, 101, 101);
+  color: white;
+  font-size: 20px;
+  line-height: 1.46;
+  font-family: inherit;
+  transition: box-shadow 250ms linear;
+
+  &:hover,
+  &:focus {
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
+}
